hphp/test/zend/good/ext-iconv/bug37773.php
<?php
	var_dump(iconv_substr('x', 0, 1, 'UTF-8'));
?>